<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical">

	<TextView android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/activity_edit_rule_name"/>
	
	<EditText android:id="@+id/activity_edit_rule_name"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:hint="@string/activity_edit_rule_name_hint"/>
	
	<TextView android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/activity_edit_rule_keywords"/>
	
	<ListView android:id="@+id/activity_edit_rule_keywords"
	android:layout_width="fill_parent"
	android:layout_height="0dip"
	android:layout_weight="1"
	android:isScrollContainer="false"/>
	
	<TextView android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/activity_edit_rule_profile"/>

	<Spinner android:id="@+id/activity_edit_rule_profile"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"/>
	
	<CheckBox android:id="@+id/activity_edit_rule_enabled"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/activity_edit_rule_enabled"/>
	
	<LinearLayout android:layout_width="fill_parent"
	android:layout_height="wrap_content">
	
		<Button android:id="@+id/activity_edit_rule_save"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:text="@string/activity_edit_rule_save"/>
		
		<Button android:id="@+id/activity_edit_rule_revert"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:text="@string/activity_edit_rule_revert"/>
		
		<Button android:id="@+id/activity_edit_rule_cancel"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:text="@string/activity_edit_rule_cancel"/>
	
	</LinearLayout>

</LinearLayout>
